@@ -27,7 +27,6 @@ __extra__all__ = ["ABOVE_NORMAL_PRIORITY_CLASS", "BELOW_NORMAL_PRIORITY_CLASS",
 
 NUM_CPUS = _psutil_mswindows.get_num_cpus()
 BOOT_TIME = _psutil_mswindows.get_system_uptime()
-_WIN2000 = platform.win32_ver()[0] == '2000'
 ERROR_ACCESS_DENIED = 5
 WAIT_TIMEOUT = 0x00000102 # 258 in decimal
 
@@ -230,14 +229,14 @@ class Process(object):
     @wrap_exceptions
     def get_process_username(self):
         """Return the name of the user that owns the process"""
-        if self.pid in (0, 4) or self.pid == 8 and _WIN2000:
+        if self.pid in (0, 4):
             return 'NT AUTHORITY\\SYSTEM'
         return _psutil_mswindows.get_process_username(self.pid)
 
     @wrap_exceptions
     def get_process_create_time(self):
         # special case for kernel process PIDs; return system boot time
-        if self.pid in (0, 4) or self.pid == 8 and _WIN2000:
+        if self.pid in (0, 4):
             return BOOT_TIME
         return _psutil_mswindows.get_process_create_time(self.pid)
 
@@ -269,7 +268,7 @@ class Process(object):
 
     @wrap_exceptions
     def get_process_cwd(self):
-        if self.pid in (0, 4) or self.pid == 8 and _WIN2000:
+        if self.pid in (0, 4):
             raise AccessDenied(self.pid, self._process_name)
         # return a normalized pathname since the native C function appends
         # "\\" at the and of the path
@@ -278,7 +277,7 @@ class Process(object):
 
     @wrap_exceptions
     def get_open_files(self):
-        if self.pid in (0, 4) or self.pid == 8 and _WIN2000:
+        if self.pid in (0, 4):
             return []
         retlist = []
         # Filenames come in in native format like:
@@ -325,7 +324,7 @@ class Process(object):
 
     @wrap_exceptions
     def get_process_environ(self):
-        if self.pid in (0, 4) or self.pid == 8 and _WIN2000:
+        if self.pid in (0, 4):
             raise AccessDenied(self.pid, self._process_name)
         rawstr = _psutil_mswindows.get_process_environ(self.pid)
         ret = {}
